# fastqc_rust

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
