[package]
name = "fastqc_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "fastqc"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
fastq = {version = "0.6.0"}


[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]